Upgrade Next.js to patched version

--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "framer-motion": "^12.23.12",
     "isomorphic-dompurify": "^2.33.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.7",
-    "react": "19.1.2",
-    "react-dom": "19.1.2",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.5.0",
     "supabase": "^2.65.6",
