Implement email notifications for business claim flow with Resend integration

--- a/env.example
+++ b/env.example
@@ -12,3 +12,8 @@ NEXT_PUBLIC_APP_NAME=sayso
 # Optional: Analytics and Monitoring
 NEXT_PUBLIC_ANALYTICS_ID=your_analytics_id
 NEXT_PUBLIC_SENTRY_DSN=your_sentry_dsn
+
+# Email Configuration (Resend)
+RESEND_API_KEY=re_your_resend_api_key
+FROM_EMAIL=noreply@sayso.app
+FROM_NAME=SaySo
