--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.2.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.5.0",
+    "resend": "^6.5.2",
     "supabase": "^2.65.6",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^5.1.0"
