--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "lucide-react": "^0.544.0",
     "next": "^16.0.7",
     "openai": "^4.104.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.5.0",
     "resend": "^6.5.2",
