--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^1.1.0",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9",
     "eslint-config-next": "15.5.7",
     "jest": "^29.7.0",
