feat: prioritize uploaded primary images over placeholders and fix business approval notifications
- Override placeholder images with uploaded primary images for business cards
- Add support for business_images array with is_primary flag
- Update image selection priority: business_images > uploaded_images > image_url > image > placeholder
- Apply consistent logic to BusinessCard, BusinessOfTheMonthCard, and MyBusinessesTable
- Fix add-business category modal not showing (timing issue in CustomDropdown)
- Fix my-businesses loading watchdog timeout (increased from 8s to 18s)
- Add enhanced logging for business approval notifications
- Create debug endpoint for notification function verification
- Add SQL diagnostic scripts for business approval notifications
- Maintain backward compatibility with existing image fields
- Preserve all performance optimizations and fallback behaviors

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
+    "@tremor/react": "^4.0.0-beta-tremor-v4.4",
     "@types/mapbox-gl": "^3.4.1",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
